Changes made from the "0.2" release to the "0.3" release:
-----------------------------------------------------------

- Fixed a bug in glcRenderChar(), glcRenderString() and glcRenderCountedString()
  that prevented the replacement code or the character sequence '\<hexcode>' to
  be displayed when QuesoGLC failed to find a font that maps a character code.
- A GLC_PARAMETER_ERROR is raised if the string type is GLC_UTF8_QSO and one of
  the following functions is called :
    * glcGeti(GLC_REPLACEMENT_CODE)
    * the callback function defined by glcCallbackFunc()
    * glcFontMap()
    * glcGetFontMap()
    * glcGetMasterMap()
    * glcGetCharMetric()
    * glcRenderChar()
    * glcReplacementCode()
- Fixed several issues that prevented QuesoGLC to compile and run on 64 bits
  platforms
- Improved the mechanism that determine the format of font files
- Added support for the GLC_SGI_full_name extension
- Fixed glcGetMaxCharMetric() where the maximum size of the characters were
  computed in EM units thus leading to wrong results if the different
  characters did not have the same EM square size.
- General management of header files has been moved to internal.h (most source
  files now just need to include a unique header file "internal.h")
- Modified glcResolution() so that the resolution of every font of the
  GLC_CURRENT_FONT_LIST is updated whenever glcResolution() is called
- The GLC_IS_FIXED_PITCH attribute is now managed per font, not per master
- The verification of master parameters has been moved to the specific function
  __glcVerifyMasterParameters(). This simplified the code
- The management of the header file assert.h has been moved to internal.h
- Fixed glcIsFont() so that it does not raise GLC_PARAMETER_ERROR when 'inFont'
  is not the ID of a font
- Fixed glcGetFonti() so that it returns the font attributes instead of the
  parent master attributes
- Fixed glcGenFontID() so that it returns sensible results when it is called
  several times in a row