@@ -1,6 +1,6 @@
 C_FILES = context.c font.c global.c master.c measure.c render.c scalable.c \
 	  transform.c misc.c omaster.c ofont.c ocontext.c ocharmap.c \
-	  ofacedesc.c database.c
+	  ofacedesc.c oarray.c database.c
 
 C_SOURCE = $(addprefix src/,$(C_FILES))
 LIB_OBJECTS = $(addprefix obj/, $(C_FILES:.c=.o))
@@ -12,7 +12,7 @@ EXAMPLE_OBJECTS = examples/unicode examples/tutorial examples/glclogo \
 
 LIB_NAME = libGLC
 MAJOR = 0
-MINOR = 3
+MINOR = 4
 REVISION = 0
 
 VERSION = $(MAJOR).$(MINOR).$(REVISION)
